Create product category (#46)
* Create product category

* Update Security Config

* Add Gradle Docker Plugin

* deploy on docker